Moves protocol.jar to an auto-start level with a smaller number than the one of the protocol implementation in order to ensure the AccountManager service is registered before the protocol implementations need it.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4541 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -84,9 +84,11 @@ felix.auto.start.45= \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/branding.jar
 
+felix.auto.start.49= \
+ reference:file:sc-bundles/protocol.jar
+
 felix.auto.start.50= \
  reference:file:sc-bundles/browserlauncher.jar \
- reference:file:sc-bundles/protocol.jar \
  reference:file:sc-bundles/contactlist.jar \
  reference:file:sc-bundles/media.jar \
  reference:file:sc-bundles/protocol-icq.jar \
