--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -78,7 +78,9 @@ felix.auto.start.4= \
  reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
- reference:file:sc-bundles/protocol.jar \
+ reference:file:sc-bundles/protocol.jar
+
+felix.auto.start.6= \
  reference:file:sc-bundles/contactlist.jar \
  reference:file:sc-bundles/history.jar \
  reference:file:sc-bundles/protocol-icq.jar \
@@ -95,7 +97,7 @@ felix.auto.start.5= \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar
 
-felix.auto.start.6= \
+felix.auto.start.7= \
  reference:file:sc-bundles/slickless.jar \
  reference:file:sc-bundles/configuration-slick.jar \
  reference:file:sc-bundles/media-slick.jar \
