--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -149,6 +149,8 @@ felix.auto.start.67= \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
 
+#level 68 is for profiler, don't use it or change the build.xml file accordingly
+
 felix.auto.start.70= \
  reference:file:sc-bundles/simpleaccreg.jar
 
