--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -53,5 +53,6 @@
     <classpathentry kind="lib" path="lib/installer-exclude/izpack-shortcut-link.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jfontchooser-1.0.5.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/KeybindingUtil.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/profiler4j-1.0-beta3-SC.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
