--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -47,11 +47,7 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.bouncycastle.crypto.digests; \
  org.bouncycastle.crypto.macs; \
  org.bouncycastle.crypto.params; \
- org.bouncycastle.crypto.engines; \
- gnu.java.zrtp; \
- gnu.java.zrtp.packets; \
- gnu.java.zrtp.utils; \
- gnu.java.zrtp.zidfile
+ org.bouncycastle.crypto.engines; 
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
