--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -3,11 +3,11 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" path="test"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="lib" path="lib/bcprovider.jar"/>
     <classpathentry kind="lib" path="lib/felix.jar"/>
     <classpathentry kind="lib" path="lib/jdic-all.jar"/>
     <classpathentry kind="lib" path="lib/bundle/junit.jar"/>
     <classpathentry kind="lib" path="lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar"/>
-    <classpathentry kind="lib" path="lib/installer-exclude/bcprov-jdk14-140.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/zrtp4j-0.9.0.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/commons-logging.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/concurrent.jar"/>
