--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -526,14 +526,14 @@
         </exec>
         <copy
                 file="${windows.app.dir}/tmp/setup.exe"
-                tofile="${windows.app.dir}/${package.name}-${sip-communicator.version}-msi.exe"
+                tofile="${windows.app.dir}/${package.name}-${sip-communicator.version}.exe"
                 overwrite="true" />
         <!--exec
                 executable="C:\Program Files\WiX\setupbld.exe"
                 dir="${light.dir}"
                 failonerror="true">
             <arg value="-out" />
-            <arg value="${windows.app.dir}\${package.name}-${sip-communicator.version}-msi.exe" />
+            <arg value="${windows.app.dir}\${package.name}-${sip-communicator.version}.exe" />
             <arg value="-mps" />
             <arg value="${windows.app.dir}\tmp\setup.msi" />
             <arg value="-setup" />
@@ -542,7 +542,7 @@
         <exec executable="mt.exe" dir="${windows.app.dir}" failonerror="true">
             <arg value="-manifest" />
             <arg value="${inst.resrc}\windows\setup.exe.manifest" />
-            <arg value="-outputresource:${package.name}-${sip-communicator.version}-msi.exe;#1" />
+            <arg value="-outputresource:${package.name}-${sip-communicator.version}.exe;#1" />
         </exec>
 
         <delete dir="${light.dir}" />
