Moving the zrtp4j bundle to the location where we store all generated SC bundles
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4575 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1841,7 +1841,7 @@ javax.swing.event, javax.swing.border"/>
 
     <!--BUNDLE-ZRTP4J -->
     <target name="bundle-zrtp4j">
-        <jar compress="true" destfile="lib/bundle/zrtp4j.jar"
+        <jar compress="true" destfile="${bundles.dest}/zrtp4j.jar"
             filesetmanifest="merge">
 
             <zipfileset src="${lib.noinst}/zrtp4j-0.9.0.jar" prefix=""/>
