--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -81,7 +81,7 @@ felix.auto.start.45= \
  reference:file:sc-bundles/branding.jar
 
 felix.auto.start.49= \
- reference:file:lib/bundle/zrtp4j.jar \
+ reference:file:sc-bundles/zrtp4j.jar \
  reference:file:sc-bundles/protocol.jar
 
 felix.auto.start.50= \
