Parameterized contact list forground color.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4587 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -127,7 +127,7 @@ accountRegistrationBackground=C2CEE0
 # Contact list contact row color.
 contactListRowColor=e8e9ef
 
-# Contact list group row color.
+# Contact list group row background color.
 contactListGroupRowColor=C2CEE0
 
 # Contact list gradient group color.
@@ -135,3 +135,15 @@ contactListGroupGradientColor=C2CEE0
 
 # Main window background color.
 mainWindowBackground=FAFAFA
+
+# Background color of the toolbar button when selected.
+toolbarBackground=414141
+
+# Rollover color for the toolbar button.
+toolbarRolloverBackground=414141
+
+# Contactlist contact text foreground color.
+contactListContactForeground=000000
+
+# Contactlist group text foreground color.
+contactListGroupForeground=000000
