- fix the bug related to the profiler4j path in build.xml. Thanks to Damian for reporting it. - GenericBuffer now respect the SC code convention
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4588 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -598,7 +598,7 @@
     	depends="bundle-plugin-profiler4j">
     	
     	<antcall target="run">
-    	      <param name="profiler.args" value="-Xmx128m -javaagent:${lib.noinst}\profiler4j-1.0-beta3-SC.jar" />
+    	      <param name="profiler.args" value="-Xmx128m -javaagent:${lib.noinst}/profiler4j-1.0-beta3-SC.jar" />
     	      <param name="profiler.bootdelegation" value="net.sf.profiler4j.agent.*" />
     	      <param name="profiler.autostart" value="reference:file:sc-bundles/profiler4j.jar" />
     	</antcall>
