Uses an analogue of windows_shortcut_specification.xml in the Windows Installer-based setup.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4607 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -459,6 +459,7 @@
                 <include name="en-us.wxl" />
                 <include name="installer-windows.wxs" />
                 <include name="SCRegistrySpec.wxi" />
+                <include name="windows_shortcut_specification.wxi" />
             </fileset>
         </copy>
 
