--- a/src/native/macosx/launcharghandler/Makefile
+++ b/src/native/macosx/launcharghandler/Makefile
@@ -1,7 +1,7 @@
 # Author: Damian Minkov
 # javah -classpath ../../../../classes/ -o AEGetURLEventHandler.h net.java.sip.communicator.util.launchutils.AEGetURLEventHandler
 
-CC=gcc -arch i386 -arch ppc
+CC=gcc -arch i386 -arch ppc -arch x86_64
 TARGET=libAEGetURLEventHandlerAgent.jnilib
 JNI_INCLUDE_PATH=/System/Library/Frameworks/JavaVM.framework/Versions/1.5.0/Headers/
 CFLAGS=-I$(JNI_INCLUDE_PATH)
