--- a/build.xml
+++ b/build.xml
@@ -421,6 +421,8 @@
         <mkdir dir="${test.reports.dir}/html"/>
         <mkdir dir="${release}"/>
         <mkdir dir="${log}"/>
+
+	<delete file="${lib}/bundle/zrtp4j.jar"/>
     </target>
 
 
