Committing cosmetic modifications on the media package before refactoring ZRTP
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4618 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -104,18 +104,18 @@ TOOLBAR_DRAG_ICON=resources/images/impl/gui/common/toolbarDragIcon.png
 ADD_GROUP_ICON=resources/images/impl/gui/common/addGroup.png
 MOVE_CONTACT=resources/images/impl/gui/common/moveContact.png
 
-SMILEY1=resources/images/impl/gui/common/smilies/default/smiley1.png
-SMILEY2=resources/images/impl/gui/common/smilies/default/smiley2.png
-SMILEY3=resources/images/impl/gui/common/smilies/default/smiley3.png
-SMILEY4=resources/images/impl/gui/common/smilies/default/smiley4.png
-SMILEY5=resources/images/impl/gui/common/smilies/default/smiley5.png
+SMILEY1=resources/images/impl/gui/common/smilies/default/smiley1.gif
+SMILEY2=resources/images/impl/gui/common/smilies/default/smiley2.gif
+SMILEY3=resources/images/impl/gui/common/smilies/default/smiley3.gif
+SMILEY4=resources/images/impl/gui/common/smilies/default/smiley4.gif
+SMILEY5=resources/images/impl/gui/common/smilies/default/smiley5.gif
 SMILEY6=resources/images/impl/gui/common/smilies/default/smiley6.png
-SMILEY7=resources/images/impl/gui/common/smilies/default/smiley7.png
-SMILEY8=resources/images/impl/gui/common/smilies/default/smiley8.png
-SMILEY9=resources/images/impl/gui/common/smilies/default/smiley9.png
-SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.png
-SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.png
-SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.png
+SMILEY7=resources/images/impl/gui/common/smilies/default/smiley7.gif
+SMILEY8=resources/images/impl/gui/common/smilies/default/smiley8.gif
+SMILEY9=resources/images/impl/gui/common/smilies/default/smiley9.gif
+SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.gif
+SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.gif
+SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.gif
 
 AUTH_WINDOW_BACKGROUND=resources/images/impl/gui/common/passWindowBackground.png
 
@@ -202,7 +202,7 @@ trayIconWindowsAway=resources/images/impl/systray/systrayIconWindowsAway.png
 trayIconWindowsFFC=resources/images/impl/systray/systrayIconWindowsFFC.png
 trayIconMacOSX=resources/images/impl/systray/systrayIconMacOSX.png
 trayIconMacOSXWhite=resources/images/impl/systray/systrayIconMacOSXWhite.png
-dockIconOffline=resources/images/impl/systray/dock-offline.png	
+dockIconOffline=resources/images/impl/systray/dock-offline.png
 dockIconAway=resources/images/impl/systray/dock-away.png
 dockIconFFC=resources/images/impl/systray/dock-chatty.png
 addContactIcon=resources/images/impl/gui/buttons/addContactIcon.png
@@ -381,7 +381,7 @@ ircAwayIcon=resources/images/protocol/gibberish/gibberish-away.png
 ircConnectingIcon=resources/images/protocol/irc/cr16-action-irc_connecting-1.gif
 irc64x64Icon=resources/images/protocol/irc/cr32-app-irc_protocol.png
 
-# jabber accregwizz 
+# jabber accregwizz
 protocolIconJabber=resources/images/protocol/jabber/status16x16-online.png
 pageImageJabber=resources/images/protocol/jabber/logo48x48.png
 jabberConnectingIcon=resources/images/protocol/jabber/status16x16-connecting.gif
