Contact tooltips containing images, protocol contacts and status icons.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4627 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -147,3 +147,6 @@ contactListContactForeground=000000
 
 # Contactlist group text foreground color.
 contactListGroupForeground=000000
+
+# Tooltip background.
+tooltipBackground=e8e9ef
