reinstate icq slick, possibly with one or two failing tests but 30+ should work OK
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4636 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -110,6 +110,7 @@ felix.auto.start.7= \
  reference:file:sc-bundles/protocol-msn-slick.jar \
  reference:file:sc-bundles/protocol-yahoo-slick.jar \
  reference:file:sc-bundles/protocol-gibberish-slick.jar \
+ reference:file:sc-bundles/protocol-icq-slick.jar \
  reference:file:sc-bundles/protocol-rss-slick.jar \
  reference:file:sc-bundles/msghistory-slick.jar \
  reference:file:sc-bundles/callhistory-slick.jar
